--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <script>
-  window.location.href = 'https://nine0703.github.io/docsify_java_docs/#/about.html';
+    window.open('https://nine0703.github.io/docsify_java_docs/#/about.html', '_blank');  
 </script>
 </body>
 </html>
