--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 </head>
 <body>
 <script>
-  window.open('https://nine0703.github.io/docsify_java_docs/#/about.html', '_blank');
+  window.open('https://nine0703.github.io/docsify_java_docs/#/about.html', '_blank')
+    .then(function() {
   history.back();
+});
 </script>
 </body>
 </html>
